# DirectDesktop

./: .gitignore  .gitmodules  CMakeLists.txt  DirectDesktop.sln
DUIAppTemplate/: AccentColorHelper.h  ColorHelper.cpp  DUIAppTemplate.rc  DUIAppTemplate.vcxproj  DUIAppTemplate.vcxproj.filters  DirectDesktop.cpp  ImmersiveColor.h  StyleModifier.cpp  StyleModifier.h  resource.h  uifile.xml
DirectDesktop/: AccentColorHelper.cpp  AccentColorHelper.h  BitmapHelper.cpp  BitmapHelper.h  BlurCore.h  BlurHandler.cpp  BlurHandler.h  CMakeLists.txt  ColorHelper.cpp  ColorHelper.h  ContextMenus.cpp  ContextMenus.h  DDControls.cpp  DDControls.h  DUser.lib  DirectDesktop.cpp  DirectDesktop.h  DirectDesktop.manifest  DirectDesktop.rc  DirectDesktop.vcxproj  DirectDesktop.vcxproj.filters  DirectoryHelper.cpp  DirectoryHelper.h  EditMode.cpp  EditMode.h  LVItem.cpp  LVItem.h  Logger.cpp  Logger.h  QtEngine.cpp  QtEngine.h  RenameCore.cpp  RenameCore.h  SearchPage.cpp  SearchPage.h  SettingsHelper.cpp  SettingsHelper.h  ShutdownDialog.cpp  ShutdownDialog.h  StyleModifier.cpp  (+15 more)
DirectDesktop/DirectUI/: Element.h
DirectDesktop/backend/: ContextMenus.cpp  ContextMenus.h  DirectoryHelper.cpp  DirectoryHelper.h  DragAndDrop.cpp  DragAndDrop.h  Logger.cpp  Logger.h  RenameCore.cpp  RenameCore.h  SettingsHelper.cpp  SettingsHelper.h
DirectDesktop/coreui/: AccentColorHelper.cpp  AccentColorHelper.h  AnimationHelper.cpp  AnimationHelper.h  BitmapHelper.cpp  BitmapHelper.h  BlurCore.h  ColorHelper.cpp  ColorHelper.h  ImmersiveColor.h  StyleModifier.cpp  StyleModifier.h  cdpa.h
DirectDesktop/ui/: DDControls.cpp  DDControls.h  EditMode.cpp  EditMode.h  SearchPage.cpp  SearchPage.h  ShutdownDialog.cpp  ShutdownDialog.h  Subview.cpp  Subview.h  editmode.xml  fullscreenpopup.xml  main.qml  search.xml  shutdown.xml  styles.xml  uifile.xml
DirectDesktopSettings/: App.xaml  App.xaml.cs  DirectDesktopSettings.csproj  MainWindow.xaml  MainWindow.xaml.cs
